// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NetworkSelfServiceSection /> should notify when a grant fails 1`] = `
<Fragment>
  <Card
    id="networkSelfService"
  >
    <CardBody>
      <Title
        className="card-title"
        headingLevel="h3"
        size="lg"
      >
        AWS infrastructure access
      </Title>
      <p>
        Grant permission to view or manage the AWS infrastructure of the cluster to IAM users defined in your AWS account. 
        <a
          href="https://console.aws.amazon.com/console/home"
          rel="noopener noreferrer"
          target="_blank"
        >
          Log in to your aws account.
        </a>
        <ExternalLinkAltIcon
          color="#0066cc"
          noVerticalAlign={false}
          size="sm"
        />
      </p>
      <Table
        actions={
          Array [
            Object {
              "className": "hand-pointer",
              "onClick": [Function],
              "title": "Delete",
            },
          ]
        }
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Grants"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "title": <React.Fragment>
                ARN
                <Popover
                  aria-label="ARNs"
                  bodyContent={
                    <p>
                      Amazon Resource Names (ARNs) uniquely identify AWS resources.
                    </p>
                  }
                  position="top"
                >
                  <Button
                    isInline={true}
                    variant="plain"
                  >
                    <HelpIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  </Button>
                </Popover>
              </React.Fragment>,
            },
            Object {
              "title": "Role",
            },
            Object {
              "title": "Status",
            },
            Object {
              "title": "AWS OSD console URL",
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "fake-arn",
                "Network Management",
                Object {
                  "title": <span>
                    <Popover
                      aria-label="grant-failed"
                      bodyContent="some failure"
                      position="top"
                    >
                      <Button
                        className="self-service-failed"
                        icon={
                          <ExclamationCircleIcon
                            className="status-icon danger"
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          />
                        }
                        isInline={true}
                        variant="link"
                      >
                        Failed
                      </Button>
                    </Popover>
                  </span>,
                },
                Object {
                  "title": <React.Fragment>
                    <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="http://example.com"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>
                  </React.Fragment>,
                },
              ],
              "grantId": "fake-id-1",
              "state": "failed",
            },
            Object {
              "cells": Array [
                "fake-arn2",
                "Read Only",
                Object {
                  "title": <React.Fragment>
                    <InProgressIcon
                      className="status-icon"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                     
                    <span>
                      Pending
                    </span>
                     
                  </React.Fragment>,
                },
                Object {
                  "title": <React.Fragment>
                    <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="http://example.com"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>
                  </React.Fragment>,
                },
              ],
              "grantId": "fake-id-2",
              "state": "pending",
            },
          ]
        }
        selectVariant="checkbox"
        variant="compact"
      >
        <TableHeader />
        <TableBody />
      </Table>
      <ButtonWithTooltip
        className="access-control-add"
        disableReason={false}
        onClick={[Function]}
        variant="secondary"
      >
        Grant role
      </ButtonWithTooltip>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<NetworkSelfServiceSection /> should notify when a grant succeeds 1`] = `
<Fragment>
  <Card
    id="networkSelfService"
  >
    <CardBody>
      <Title
        className="card-title"
        headingLevel="h3"
        size="lg"
      >
        AWS infrastructure access
      </Title>
      <p>
        Grant permission to view or manage the AWS infrastructure of the cluster to IAM users defined in your AWS account. 
        <a
          href="https://console.aws.amazon.com/console/home"
          rel="noopener noreferrer"
          target="_blank"
        >
          Log in to your aws account.
        </a>
        <ExternalLinkAltIcon
          color="#0066cc"
          noVerticalAlign={false}
          size="sm"
        />
      </p>
      <Table
        actions={
          Array [
            Object {
              "className": "hand-pointer",
              "onClick": [Function],
              "title": "Delete",
            },
          ]
        }
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Grants"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "title": <React.Fragment>
                ARN
                <Popover
                  aria-label="ARNs"
                  bodyContent={
                    <p>
                      Amazon Resource Names (ARNs) uniquely identify AWS resources.
                    </p>
                  }
                  position="top"
                >
                  <Button
                    isInline={true}
                    variant="plain"
                  >
                    <HelpIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  </Button>
                </Popover>
              </React.Fragment>,
            },
            Object {
              "title": "Role",
            },
            Object {
              "title": "Status",
            },
            Object {
              "title": "AWS OSD console URL",
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "fake-arn",
                "Network Management",
                Object {
                  "title": <React.Fragment>
                    <InProgressIcon
                      className="status-icon"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                     
                    <span>
                      Pending
                    </span>
                     
                  </React.Fragment>,
                },
                Object {
                  "title": <React.Fragment>
                    <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="http://example.com"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>
                  </React.Fragment>,
                },
              ],
              "grantId": "fake-id-1",
              "state": "pending",
            },
            Object {
              "cells": Array [
                "fake-arn2",
                "Read Only",
                Object {
                  "title": <React.Fragment>
                    <CheckCircleIcon
                      className="status-icon success"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                     
                    <span>
                      Ready
                    </span>
                     
                  </React.Fragment>,
                },
                Object {
                  "title": <React.Fragment>
                    <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="http://example.com"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>
                  </React.Fragment>,
                },
              ],
              "grantId": "fake-id-2",
              "state": "ready",
            },
          ]
        }
        selectVariant="checkbox"
        variant="compact"
      >
        <TableHeader />
        <TableBody />
      </Table>
      <ButtonWithTooltip
        className="access-control-add"
        disableReason={false}
        onClick={[Function]}
        variant="secondary"
      >
        Grant role
      </ButtonWithTooltip>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<NetworkSelfServiceSection /> should render skeleton when pending and no grants are set 1`] = `
<Card>
  <CardTitle>
    <Skeleton
      size="md"
    />
  </CardTitle>
  <CardBody>
    <Skeleton
      size="lg"
    />
  </CardBody>
  <CardFooter>
    <Skeleton
      size="md"
    />
  </CardFooter>
</Card>
`;

exports[`<NetworkSelfServiceSection /> should render with grants 1`] = `
<Fragment>
  <Card
    id="networkSelfService"
  >
    <CardBody>
      <Title
        className="card-title"
        headingLevel="h3"
        size="lg"
      >
        AWS infrastructure access
      </Title>
      <p>
        Grant permission to view or manage the AWS infrastructure of the cluster to IAM users defined in your AWS account. 
        <a
          href="https://console.aws.amazon.com/console/home"
          rel="noopener noreferrer"
          target="_blank"
        >
          Log in to your aws account.
        </a>
        <ExternalLinkAltIcon
          color="#0066cc"
          noVerticalAlign={false}
          size="sm"
        />
      </p>
      <Table
        actions={
          Array [
            Object {
              "className": "hand-pointer",
              "onClick": [Function],
              "title": "Delete",
            },
          ]
        }
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Grants"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "title": <React.Fragment>
                ARN
                <Popover
                  aria-label="ARNs"
                  bodyContent={
                    <p>
                      Amazon Resource Names (ARNs) uniquely identify AWS resources.
                    </p>
                  }
                  position="top"
                >
                  <Button
                    isInline={true}
                    variant="plain"
                  >
                    <HelpIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  </Button>
                </Popover>
              </React.Fragment>,
            },
            Object {
              "title": "Role",
            },
            Object {
              "title": "Status",
            },
            Object {
              "title": "AWS OSD console URL",
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "fake-arn",
                "Network Management",
                Object {
                  "title": <React.Fragment>
                    <InProgressIcon
                      className="status-icon"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                     
                    <span>
                      Pending
                    </span>
                     
                  </React.Fragment>,
                },
                Object {
                  "title": <React.Fragment>
                    <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="http://example.com"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>
                  </React.Fragment>,
                },
              ],
              "grantId": "fake-id-1",
              "state": "pending",
            },
            Object {
              "cells": Array [
                "fake-arn2",
                "Read Only",
                Object {
                  "title": <React.Fragment>
                    <InProgressIcon
                      className="status-icon"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                     
                    <span>
                      Pending
                    </span>
                     
                  </React.Fragment>,
                },
                Object {
                  "title": <React.Fragment>
                    <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="http://example.com"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>
                  </React.Fragment>,
                },
              ],
              "grantId": "fake-id-2",
              "state": "pending",
            },
          ]
        }
        selectVariant="checkbox"
        variant="compact"
      >
        <TableHeader />
        <TableBody />
      </Table>
      <ButtonWithTooltip
        className="access-control-add"
        disableReason={false}
        onClick={[Function]}
        variant="secondary"
      >
        Grant role
      </ButtonWithTooltip>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<NetworkSelfServiceSection /> should render with no data 1`] = `
<Fragment>
  <Card
    id="networkSelfService"
  >
    <CardBody>
      <Title
        className="card-title"
        headingLevel="h3"
        size="lg"
      >
        AWS infrastructure access
      </Title>
      <p>
        Grant permission to view or manage the AWS infrastructure of the cluster to IAM users defined in your AWS account. 
        <a
          href="https://console.aws.amazon.com/console/home"
          rel="noopener noreferrer"
          target="_blank"
        >
          Log in to your aws account.
        </a>
        <ExternalLinkAltIcon
          color="#0066cc"
          noVerticalAlign={false}
          size="sm"
        />
      </p>
      <ButtonWithTooltip
        className="access-control-add"
        disableReason={false}
        onClick={[Function]}
        variant="secondary"
      >
        Grant role
      </ButtonWithTooltip>
    </CardBody>
  </Card>
</Fragment>
`;
